# LinearHeartUpper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  common.py  communication.py  logger.py  main.py  mathjax_server.py  multi_thread.py  pyproject.toml  radon-report.txt  requirements.txt  task.py  widget.py
.github/workflows/: python-app.yml
linearheart/common/: common.py
linearheart/core/: main.py  mathjax_server.py
linearheart/tests/: test_float_fixed.py  test_waveform.py
linearheart/tools/: cal_error.py  plot_waveform.py  test_plc_connection.py
linearheart/tools/virtual_device/: plc.py
linearheart/utils/: communication.py  task.py
linearheart/widgets/: chart.py  connection_dialog.py  latex_board.py  main_window.py  status_light.py  status_manager.py  waveform_modulator.py
test/: count_lines.py  test_coefficient_compression.py  test_float_fix.py  test_interval_compression.py  test_plc_connection.py  virtual_modbus_slave.py
test/virtual_device/: motor.py  plc.py
tests/: test_float_fix.py  test_float_fixed.py  test_waveform.py
tools/virtual_device/: plc.py
widget/: chart.py  connection_dialog.py  dynamic_chart.py  latex_board.py  status_light.py  status_manager.py  waveform_modulator.py
widget/dialog/: connect_plc.py
