[project]
name = "LinearHeart"
version = "0.1.0"
description = "Linear motor-based in vitro cardiac simulation platform."
authors = [
    {name = "Xiangyuan Xie", email = "dragonboat_xxy@163.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy~=2.1.3",
    "PySide6~=6.8.2.1",
    "scipy~=1.15.2",
    "sympy~=1.13.1",
    "pymodbus~=3.8.3",
    "flask~=3.1.0",
    "flask-cors~=5.0.1",
    "pandas~=2.2.3",
    "loguru~=0.7.3",
]

[build-system]
requires = ["setuptools >=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
